<resources>
  <string name="app_name">BokeDe</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign in</string>
  <string name="register_in_app">Register In App</string>
  <string name="register_in_dice">Register In DOGE</string>
  <string name="register">Register</string>
  <string name="registering_here_means_you_also_register_an_account_at_999dice_you_can_also_log_in_to_999dice_with_the_same_account">registering here means you also register an account at 999DOGE, you can also log in to 999DOGE with the same account</string>
  <string name="sign_up">Sign Up</string>
  <string name="example_balance">0 DOGE</string>
  <string name="icon">Icon</string>
  <string name="deposit">Deposit</string>
  <string name="withdraw">Withdraw</string>
  <string name="balance">Balance</string>
  <string name="win_chance">0</string>
  <string name="wins_chance_text">Wins chance</string>
  <string name="total_profit">Total Profit</string>
  <string name="sign_out">Sign Out</string>
  <string name="wallet">Wallet</string>
  <string name="amount">Amount</string>
  <string name="transfer">Transfer</string>
  <string name="spinner_mode">Low/High</string>
  <string name="chance">Chance</string>
  <string name="start">Start</string>
  <string name="one_shot">Step</string>
  <string name="stop">Stop</string>
  <string name="doge">DOGE</string>
  <string name="result">Result</string>
  <string name="action">Action</string>
  <string name="double_text">Double</string>
  <string name="half_text">Half</string>
  <string name="reset_text">Reset</string>
  <string name="default_amount">Default Amount</string>
</resources>