<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1sp"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

  <TextView
      android:id="@+id/action"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.5"
      android:padding="2sp"
      android:text="@string/action"
      android:textAlignment="center"/>

  <TextView
      android:id="@+id/chance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.5"
      android:padding="2sp"
      android:text="@string/chance"
      android:textAlignment="center"/>

  <TextView
      android:id="@+id/amount"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.8"
      android:padding="2sp"
      android:text="@string/amount"
      android:textAlignment="center"/>

  <TextView
      android:id="@+id/profit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:padding="2sp"
      android:text="@string/result"
      android:textAlignment="center"/>

</TableRow>