<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".view.RegisterActivity">

  <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      android:layout_gravity="center"
      android:contentDescription="@string/app_name"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/cardRegister"
      android:tint="?attr/colorSecondary"/>

  <LinearLayout
      android:id="@+id/cardRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:text="@string/registering_here_means_you_also_register_an_account_at_999dice_you_can_also_log_in_to_999dice_with_the_same_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextTextUsernameReg"
        android:hint="@string/username"
        android:autofillHints="@string/username"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextTextPasswordReg"
        android:hint="@string/password"
        android:autofillHints="@string/password"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/buttonSiegeUp"
        android:background="@drawable/button_1"
        android:textColor="?android:textColor"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>