<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

  <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      android:layout_gravity="center"
      android:contentDescription="@string/app_name"
      android:tint="?attr/colorSecondary"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/cardLogin"/>

  <LinearLayout
      android:id="@+id/cardLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextTextUsername"
        android:hint="@string/username"
        android:autofillHints="@string/username"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextTextPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/buttonSiegeIn"
        android:background="@drawable/button_1"
        android:textColor="?android:textColor"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:text="@string/register_in_dice"
      android:layout_width="150dp"
      android:layout_height="40dp"
      android:id="@+id/buttonRegisterDice"
      android:background="@drawable/button_info"
      android:textColor="@color/secondary.light"
      android:layout_gravity="center"
      app:layout_constraintTop_toBottomOf="@id/cardLogin"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/buttonSiegeUp"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <androidx.appcompat.widget.AppCompatButton
      android:text="@string/sign_up"
      android:layout_width="150dp"
      android:layout_height="40dp"
      android:id="@+id/buttonSiegeUp"
      android:background="@drawable/button_1"
      android:textColor="?android:textColor"
      android:layout_gravity="center"
      app:layout_constraintTop_toBottomOf="@id/cardLogin"
      app:layout_constraintStart_toEndOf="@id/buttonRegisterDice"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>