<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:id="@+id/profit"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:orientation="vertical"
          android:layout_margin="10dp"
          android:padding="5dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/win"
          app:layout_constraintBottom_toBottomOf="parent"
          android:background="@drawable/button_1"
          android:gravity="center"
          android:elevation="5dp">

        <TextView
            android:text="@string/total_profit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant"/>

        <TextView
            android:id="@+id/textViewProfitAmount"
            android:text="@string/example_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant"/>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/win"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:orientation="vertical"
          android:layout_margin="10dp"
          android:padding="5dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/profit"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:background="@drawable/button_1"
          android:gravity="center"
          android:elevation="5dp">

        <TextView
            android:text="@string/wins_chance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant"/>

        <TextView
            android:id="@+id/textViewWinChanceAmount"
            android:text="@string/win_chance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant"/>

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/card_1">

      <TextView
          android:id="@+id/textViewBalance"
          android:text="@string/balance"
          android:textColor="?attr/colorSecondaryVariant"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

      <View
          android:id="@+id/line"
          android:layout_width="0dp"
          android:layout_height="2dp"
          android:background="@color/primary.dark"
          app:layout_constraintTop_toBottomOf="@id/textViewBalance"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

      <TextView
          android:text="@string/example_balance"
          android:id="@+id/textViewBalanceAmount"
          android:textColor="?attr/colorSecondaryVariant"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/line"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/deposit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/buttonDepositBot"
          android:background="@drawable/button_1"
          android:scaleType="fitCenter"
          android:contentDescription="@string/icon"
          android:padding="5dp"
          app:layout_constraintTop_toBottomOf="@id/textViewBalanceAmount"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/buttonWithdrawBot"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginTop="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:drawableStart="@drawable/ic_baseline_account_balance_wallet"
          android:drawablePadding="10dp"
          android:drawableTint="?attr/colorSecondaryVariant"
          android:textColor="?attr/colorSecondaryVariant"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/withdraw"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/buttonWithdrawBot"
          android:background="@drawable/button_1"
          android:scaleType="fitCenter"
          android:contentDescription="@string/icon"
          android:padding="5dp"
          app:layout_constraintTop_toBottomOf="@id/textViewBalanceAmount"
          app:layout_constraintStart_toEndOf="@id/buttonDepositBot"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginTop="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:drawableStart="@drawable/ic_baseline_account_balance_wallet"
          android:drawablePadding="10dp"
          android:drawableTint="?attr/colorSecondaryVariant"
          android:textColor="?attr/colorSecondaryVariant"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp"/>

  </LinearLayout>

</ScrollView>