<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.place.bet.BetActivity"
    android:background="@drawable/bg_login">

  <LinearLayout
      android:id="@+id/containerBalance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="5dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/containerList">

    <TextView
        android:text="@string/balance"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_left"
        android:gravity="center"
        android:padding="10dp"/>

    <TextView
        android:text="@string/win_chance"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/textViewBalance"
        android:layout_weight="1"
        android:background="@drawable/edit_text_1"
        android:gravity="center|end"/>

    <TextView
        android:text="@string/doge"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_right"
        android:gravity="center"
        android:padding="10dp"/>

  </LinearLayout>

  <ScrollView
      android:id="@+id/containerList"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:background="@drawable/card_1"
      android:layout_margin="5dp"
      android:padding="10dp"
      app:layout_constraintTop_toBottomOf="@id/containerBalance"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/containerBet"
      android:nestedScrollingEnabled="true">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/lists_container"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

    </HorizontalScrollView>

  </ScrollView>

  <LinearLayout
      android:id="@+id/containerBet"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/card_1"
      android:layout_margin="5dp"
      android:padding="10dp"
      app:layout_constraintTop_toBottomOf="@id/containerList"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/adViewBanner">

    <TextView
        android:text="@string/spinner_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:id="@+id/spinnerType"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_marginEnd="2.5dp">

        <TextView
            android:text="@string/default_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextAmountDefault"
            android:background="@drawable/edit_text"
            android:digits="0123456789."
            android:gravity="center"
            android:hint="@string/example_balance"
            android:autofillHints="@string/example_balance"
            android:inputType="number|numberDecimal"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_marginStart="2.5dp">

        <TextView
            android:text="@string/chance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <androidx.appcompat.widget.AppCompatImageButton
              android:layout_width="40dp"
              android:layout_height="40dp"
              app:srcCompat="@drawable/ic_baseline_remove"
              android:id="@+id/buttonRemoveChance"
              android:background="@drawable/button_left"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toStartOf="@id/editTextChance"
              app:layout_constraintBottom_toBottomOf="parent"
              android:contentDescription="@string/chance"/>

          <EditText
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:id="@+id/editTextChance"
              android:background="@drawable/edit_text_1"
              android:digits="0123456789."
              android:maxLength="6"
              android:gravity="center"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toEndOf="@id/buttonRemoveChance"
              app:layout_constraintEnd_toStartOf="@id/buttonAddChance"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/win_chance"
              android:autofillHints="@string/win_chance"
              android:inputType="number|numberDecimal"/>

          <androidx.appcompat.widget.AppCompatImageButton
              android:layout_width="40dp"
              android:layout_height="40dp"
              app:srcCompat="@drawable/ic_baseline_add"
              android:id="@+id/buttonAddChance"
              android:background="@drawable/button_right"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toEndOf="@id/editTextChance"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:contentDescription="@string/chance"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

      </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatImageButton
          android:layout_width="40dp"
          android:layout_height="40dp"
          app:srcCompat="@drawable/ic_baseline_remove"
          android:id="@+id/buttonRemoveAmount"
          android:background="@drawable/button_left"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/editTextAmount"
          app:layout_constraintBottom_toBottomOf="parent"
          android:contentDescription="@string/chance"/>

      <EditText
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/editTextAmount"
          android:background="@drawable/edit_text_1"
          android:digits="0123456789."
          android:gravity="center"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/buttonRemoveAmount"
          app:layout_constraintEnd_toStartOf="@id/buttonAddAmount"
          app:layout_constraintBottom_toBottomOf="parent"
          android:hint="@string/example_balance"
          android:autofillHints="@string/example_balance"
          android:inputType="number|numberDecimal"/>

      <androidx.appcompat.widget.AppCompatImageButton
          android:layout_width="40dp"
          android:layout_height="40dp"
          app:srcCompat="@drawable/ic_baseline_add"
          android:id="@+id/buttonAddAmount"
          android:background="@drawable/button_right"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/editTextAmount"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:contentDescription="@string/amount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/double_text"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonDouble"
          android:background="@drawable/button_left"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/buttonReset"
          app:layout_constraintBottom_toBottomOf="parent"
          android:paddingStart="10dp"
          android:paddingEnd="0dp"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/reset_text"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonReset"
          android:background="@drawable/button_center"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/buttonDouble"
          app:layout_constraintEnd_toStartOf="@id/buttonHalf"
          app:layout_constraintBottom_toBottomOf="parent"
          android:paddingStart="10dp"
          android:paddingEnd="0dp"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/half_text"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonHalf"
          android:background="@drawable/button_right"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/buttonReset"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/start"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonStart"
          android:background="@drawable/button_left"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/buttonOneShot"
          app:layout_constraintBottom_toBottomOf="parent"
          android:drawableStart="@drawable/ic_baseline_play_arrow"
          android:paddingStart="10dp"
          android:paddingEnd="0dp"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/one_shot"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonOneShot"
          android:background="@drawable/button_center"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/buttonStart"
          app:layout_constraintEnd_toStartOf="@id/buttonStop"
          app:layout_constraintBottom_toBottomOf="parent"
          android:drawableStart="@drawable/ic_baseline_gps_fixed"
          android:paddingStart="10dp"
          android:paddingEnd="0dp"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/stop"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:id="@+id/buttonStop"
          android:background="@drawable/button_right"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/buttonOneShot"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:drawableStart="@drawable/ic_baseline_stop"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </LinearLayout>

  <com.google.android.gms.ads.AdView
      xmlns:ads="http://schemas.android.com/apk/res-auto"
      android:id="@+id/adViewBanner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      ads:adSize="BANNER"
      ads:adUnitId="ca-app-pub-4655087742659933/6523576283"
      ads:layout_constraintTop_toBottomOf="@id/containerBet"
      ads:layout_constraintStart_toStartOf="parent"
      ads:layout_constraintEnd_toEndOf="parent"
      ads:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>