<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

      <TextView
          android:id="@+id/textViewBalance"
          android:text="@string/balance"
          android:textColor="?attr/colorSecondary"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

      <View
          android:id="@+id/line"
          android:layout_width="0dp"
          android:layout_height="2dp"
          android:background="@color/primary.dark"
          app:layout_constraintTop_toBottomOf="@id/textViewBalance"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

      <TextView
          android:text="@string/example_balance"
          android:id="@+id/textViewBalanceAmount"
          android:textColor="?attr/colorSecondary"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/line"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4655087742659933/6523576283"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/sign_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:id="@+id/buttonSignOut"
        android:background="@drawable/button_1"
        android:textColor="?android:textColor"
        android:drawableStart="@drawable/ic_baseline_settings_power"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp"/>

  </LinearLayout>

</ScrollView>